# gpu-mat

./: Cargo.toml
src/: lib.rs  tensor.rs
src/backends/: mod.rs
src/backends/wgpu/: bind_groups.rs  command_encoder.rs  download_vec.rs  dtype.rs  globals.rs  handle.rs  mod.rs  tensor.rs  tensor_info.rs  vec.rs
src/backends/wgpu_shaders/: add_f16.wgsl  add_f32.wgsl  add_f64.wgsl  increment_f16.wgsl  increment_f32.wgsl  increment_f64.wgsl  mul_f16.wgsl  mul_f32.wgsl  mul_f64.wgsl  mul_in_place_f16.wgsl  mul_in_place_f32.wgsl  mul_in_place_f64.wgsl
