[package]
name = "gpu-mat"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", optional = true }
once_cell = { version = "1.21.3", optional = true }
parking_lot = { version = "0.12.4", optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "26.0.1", optional = true }

[features]
default = ["backend-wgpu"]
backend-wgpu = ["dep:bytemuck", "dep:once_cell", "dep:parking_lot", "dep:pollster", "dep:wgpu"]
