[package]
name = "gpu-mat"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", optional = true }
half = { version = "2.6.0", features = ["bytemuck"] }
log = "0.4"
ndarray = "0.16.1"
once_cell = { version = "1.21.3", optional = true }
parking_lot = { version = "0.12.4", optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "26.0.1", optional = true }

[dev-dependencies]
env_logger = "0.11"

[features]
default = ["backend-wgpu"]
backend-wgpu = ["dep:bytemuck", "dep:once_cell", "dep:parking_lot", "dep:pollster", "dep:wgpu"]
